ingress/africa-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: africa
  namespace: iti-45
spec:
  selector:
    app: africa
  ports:
    - port: 8888
      targetPort: africa-port
      name: africa-clusterip
  type: ClusterIP
