ingress/europe-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: europe
  namespace: iti-45
spec:
  selector:
    app: europe
  ports:
    - port: 8888
      targetPort: europe-port
      name: europe-clusterip
  type: ClusterIP
